--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 	<noscript>You need to enable JavaScript to run this app.</noscript>
 	<div id="root"></div>
 
-	<script src="assets/js/swiper.js"></script>
-	<script src="assets/js/index.js"></script>
+	<!-- <script src="assets/js/swiper.js"></script> -->
+	<!-- <script src="assets/js/index.js"></script> -->
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
