--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
+	<div class="wrapper" id="root"></div>
 
 	<!-- <script src="assets/js/swiper.js"></script> -->
 	<!-- <script src="assets/js/index.js"></script> -->
