--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>ЛЮМОС - Обучение без ограничений</title>
 
 	<link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css">
 </head>
 
 <body>
